<resources>
    <string name="app_name">UniCalendar</string>
    <string name="email">Email</string>
    <string name="hai_dimenticato_la_password">Hai dimenticato la password?</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="non_sei_reigistrato_registrati">Non sei reigistrato? Registrati!</string>
    <string name="sign_up">Sign Up!</string>
    <string name="nome">Nome:</string>
    <string name="nome1">Nome</string>
    <string name="cognome">Cognome:</string>
    <string name="cognome1">Cognome</string>
    <string name="name">Name</string>
    <string name="dipartimento">Dipartimento:</string>
    <string name="universita">Universita\':</string>
    <string name="anno_di_iscrizione">Anno di iscrizione:</string>
    <string name="tipo_di_laurea">Tipo di Laurea:</string>
    <string name="semestre">Semestre:</string>
    <string name="primo_semestre">Primo Semestre</string>
    <string name="secondo_semestre">Secondo Semestre</string>
    <string name="go_back_button">Go Back Button</string>
    <string name="sign_up_button">Sign Up Button</string>
    <string name="ripeti_password">Ripeti Password</string>
    <string name="ripeti_password1">Ripeti Password:</string>
    <string name="password1">Password:</string>
    <string name="email1">Email:</string>
    <string name="suddivisione">Suddivisione:</string>
    <string name="tipologia_di_suddivisione">Tipologia di Suddivisione:</string>
</resources>
