<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_watermark_"
    tools:context=".Registration2Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_TipoSuddivisione"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipologia_di_suddivisione"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/tipoSuddivisone_Registration2Activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:entries="@array/Tipo_Suddivisione" />

            <TextView
                android:id="@+id/textViewSuddivisione"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/suddivisione"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/suddivisione_Registration2Activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email1"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email_Registration2Activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/textView_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password1"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password_Registration2Actitivy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/textView_RipetiPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ripeti_password1"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ripetiPassword_Registration2Activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/ripeti_password"
                android:inputType="textPassword"
                tools:ignore="Autofill" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <!--
        <ImageButton
            android:id="@+id/goBackToRegistration1_Registration2Activity"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_launcher_foreground"
            android:contentDescription="@string/go_back_button"
            android:gravity="start"
            android:scaleType="centerCrop"
            android:src="@drawable/go_back_button" />
        -->
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/signUp_Registration2Activity"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_launcher_foreground"
            android:contentDescription="@string/sign_up_button"
            android:scaleType="centerCrop"
            android:src="@drawable/confirm_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>