<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome" />

            <EditText
                android:id="@+id/name_RegistrationActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nome1"
                android:inputType="textPersonName"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/textView_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cognome" />

            <EditText
                android:id="@+id/surname_RegistrationActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/cognome1"
                android:inputType="textPersonName"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/textView_Tipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tipo di Laurea:" />

            <Spinner
                android:id="@+id/tipologies_RegistrationActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:entries="@array/tipologies"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/textView_Anno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Anno di iscrizione:" />

            <Spinner
                android:id="@+id/years_RegistrationActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:entries="@array/Triennale"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/textView_Universita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Universita':" />

            <Spinner
                android:id="@+id/univerisites_RegistrationActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:entries="@array/Universities"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/textView_Dipartimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dipartimento:" />

            <Spinner
                android:id="@+id/departments_RegistrationActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:entries="@array/Universita_Degli_Studi_Di_Salerno_Triennale"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>