<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_home_activity"
            android:paddingBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:id="@+id/imgUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/circle_border">

                <ImageView
                    android:id="@+id/image_UserProfileActivity"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="9dp"
                    android:layout_marginTop="9dp"
                    android:layout_marginEnd="9dp"
                    android:layout_marginBottom="9dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/circle"
                    android:padding="3dp"
                    android:scaleType="centerInside"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

            <TextView
                android:id="@+id/nomeCognomeUtente_UserProfileActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgUser"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15sp"
                android:fontFamily="sans-serif-light"
                android:text="Joey Tribbiani"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                tools:ignore="HardcodedText" />


            <ImageView
                android:id="@+id/edit_UserProfileActivity"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/icona_edit"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/save_UserProfileActivity"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:visibility="invisible"
                app:srcCompat="@drawable/icona_save"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rellay1">

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/email_UserProfileActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="none"
                    tools:ignore="Autofill,LabelFor,TextFields" />

                <TextView
                    android:id="@+id/textView_Tipo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tipo_di_laurea"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <AutoCompleteTextView
                    android:id="@+id/tipologies_UserProfileActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    tools:ignore="LabelFor" />

                <TextView
                    android:id="@+id/textView_Anno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/anno_di_iscrizione"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <AutoCompleteTextView
                    android:id="@+id/years_UserProfileActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    tools:ignore="LabelFor" />


                <TextView
                    android:id="@+id/textView_Universita"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/universita"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <AutoCompleteTextView
                    android:id="@+id/univerisites_UserProfileActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    tools:ignore="LabelFor" />


                <TextView
                    android:id="@+id/textView_Dipartimento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dipartimento"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <AutoCompleteTextView
                    android:id="@+id/department_UserProfileActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    tools:ignore="LabelFor" />

                <TextView
                    android:id="@+id/textView_Semestre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/semestre"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/primoSemestre_UserProfileActivity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true" />

                    <RadioButton
                        android:id="@+id/secondoSemestre_UserProfileActivity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:visibility="invisible" />
                </RadioGroup>
            </LinearLayout>

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>